Fix spacing & loading state for seasonal menus on client

--- a/client/src/components/pages/SeasonalMenus/SeasonalMenus.module.scss
+++ b/client/src/components/pages/SeasonalMenus/SeasonalMenus.module.scss
@@ -5,6 +5,7 @@
 .tabs {
   display: grid;
   gap: 1rem;
+  margin-bottom: var(--vertical-spacer-medium);
 
   background: var(--clr-bg);
   border-radius: var(--border-radius-200);
